| Bug #4378 | "create database IF NOT EXISTS thing" returns an error | ||
|---|---|---|---|
| Submitted: | 2 Jul 2004 14:06 | Modified: | 9 Jul 2004 15:58 |
| Reporter: | Dan Greening | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S1 (Critical) |
| Version: | 4.1.3beta | OS: | Microsoft Windows (Windows XP) |
| Assigned to: | Bugs System | Target Version: | |
[2 Jul 2004 14:06]
Dan Greening
[2 Jul 2004 19:31]
Miguel Solorzano
I will test with the latest BK source tree.
[8 Jul 2004 15:43]
Victor Vagin
BTW, I couldn't find out why the mysql-4.1.2 didn't produce the bug... Are you really sure, it was mysql-4.1.2, not mysql-4.1.1? Date: Thu, 8 Jul 2004 21:25:20 +0500 Message-Id: <200407081625.i68GPKf00440@eagle.mysql.r18.ru> From: vva@mysql.com To: internals@lists.mysql.com Subject: bk commit into 4.1 tree (vva:1.2022) ChangeSet 1.2022 04/07/08 21:25:17 vva@eagle.mysql.r18.ru +1 -0 fixed Bug #4378 "create database IF NOT EXISTS thing" returns an error
[8 Jul 2004 18:30]
Dan Greening
Sorry. Right I think I was using 4.1.1a. Did 4.1.2 ever make it to public distribution?
[9 Jul 2004 15:58]
Victor Vagin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
