fixed Bug #4378 "create database IF NOT EXISTS thing" returns an error

sql/sql_db.cc:
  discarded final '\' in path for my_stat (for Win32)
  as the fix 
  for Bug #4378 "create database IF NOT EXISTS thing" returns an error